[package]
name = "moltbot_server"
version = "0.1.0"
edition = "2024"
default-run = "moltbot_server"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dotenvy = "0.15"

# --- Cliente CLI ---
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
